--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,9 +4,19 @@ body {
     padding: 0;
 }
 
-nav {
-    background-color: #deebf7;
+header {
+    background-color: #f7fbff;
+    display: flex;
+    justify-content: space-between; /* horrizontal */
+    align-items: center;  /* vertical */
+    padding: 0 5em;
+    height: 75px;
+    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.2);
 }
+
+/* nav {
+    background-color: #f7fbff;
+} */
 
 main {
     display: flex;
@@ -30,16 +40,15 @@ footer section {
     padding: 0 7em; /* spacing between footer columns */
 }
 
-.nav {
-    display: flex;
-    justify-content: center; /* horrizontal */
-    align-items: center;  /* vertical */
-    gap: 2em;
-}
-
 .nav a{
     text-decoration: none;
     color: #08306b;
+    /* gap: 2em; */
+}
+
+.nav.nav-top img {
+    height: 100px;
+    object-fit: cover;
 }
 
 .nav a:hover{
@@ -47,12 +56,15 @@ footer section {
     text-underline-offset: 5px;
 }
 
-.nav.nav-top {
-    padding-top: 15px;
+.nav.nav-bottom a{
+    padding: 0em 2em;
 }
 
-.nav.nav-bottom {
-    padding: 15px 0px;
+.logo-btn img {
+    width: 120px;
+    height: auto;
+    overflow: hidden;
+    filter: drop-shadow(0 4px 6px #334662); /* shadow around shape */
 }
 
 .footer-flexbox {
