--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,7 +108,7 @@ footer section {
     height:800px;
     background-image: url("../Images/hands-water.jpg");
     background-size: cover;
-    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.2);
+    box-shadow: 0 10px 20px 5px rgba(0, 0, 0, 0.767); /* x y blur spread */
 }
 
 .motto-overlay {
