Page styling edits

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,7 @@ main {
 footer {
     background-image: url("../Images/waterfooter.png");
     background-size: cover;
+    font-family: 'Zalando Sans SemiExpanded', sans-serif;
     color: #f7fbff;
     justify-content: center;
     align-items: center;
@@ -43,9 +44,10 @@ footer section {
 }
 
 .nav a{
+    font-family: 'Zalando Sans SemiExpanded', sans-serif;
     text-decoration: none;
     font-weight: 600;
-    font-size: 17px;
+    font-size: 16px;
     color: #08306b;
 }
 
@@ -104,6 +106,8 @@ footer section {
     text-underline-offset: 5px;
 }
 
+/* ------- HOME PAGE ------ */
+
 .home-container.motto {
     width: 100%;
     height:800px;
@@ -126,6 +130,10 @@ footer section {
     margin: 0;
     padding: 400px 0px;
     font-size: 50px;
+}
+
+.home-container {
+  font-family: 'Zalando Sans SemiExpanded', sans-serif;
 }
 
 .home-container.about {
@@ -166,6 +174,7 @@ footer section {
 
 .about-overlay.about-btn:hover {
     background-color: #9ecae1;
+    transform: scale(1.05);
 }
 
 .home-container.spacing {
@@ -173,7 +182,7 @@ footer section {
     height: 400px;
 }
 
-
+/* ------- END HOME PAGE -------*/
 
 .contact-body {
   padding: 0;
