--- a/assets/css/resource-runoff.css
+++ b/assets/css/resource-runoff.css
@@ -2,7 +2,7 @@ body {
     background-color: #f7fbff;
     margin: 0;
     padding: 0;
-
+    overflow-x: hidden;
 }
 
 header {
@@ -16,34 +16,41 @@ header {
     height: 75px;
     box-sizing: border-box;
     box-shadow: 0 4px 6px -2px rgba(0,0,0,0.2);
+    z-index: 1000;
 }
 .nav a{
+    font-family: 'Zalando Sans SemiExpanded', sans-serif;
     text-decoration: none;
     font-weight: 600;
     font-size: 17px;
     color: #08306b;
     /* gap: 2em; */
 }
-
 .nav.nav-top img {
     height: 100px;
     object-fit: cover;
 }
-
 .nav a:hover {
   text-decoration: underline #08306b 2px;
   text-underline-offset: 5px;
 }
-
 .nav.nav-bottom a{
     padding: 0em 2em;
 }
-
+.logo-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.nav-top .logo-btn:hover {
+  text-decoration: none;
+  cursor: pointer;
+}
 .logo-btn img {
-    width: 120px;
-    height: auto;
-    overflow: hidden;
-    filter: drop-shadow(0 4px 6px #334662); /* shadow around shape */
+  width: 120px;
+  height: auto;
+  overflow: hidden;
+  filter: drop-shadow(0 4px 6px #334662); /* shadow around shape */
 }
 
 
