--- a/assets/css/resources.css
+++ b/assets/css/resources.css
@@ -65,7 +65,6 @@ main {
     height: 1000px;
 }
 .threearticle-container{
-
     display: flex;
     justify-content: center;
     gap: 60px;
@@ -74,13 +73,17 @@ main {
 
 
 }
-.BoxArticle {
+.PBoxArticle {
     text-align: center;
-    background-color: #e7f1fa;
-    border-radius: 10px;
+    background-color: #deebf7;
+    border-radius: 12px;
     vertical-align: top;
     max-width: 335px;
     overflow: hidden;
+    color: #08306b;
+
+    p{ padding: 1em; 
+    }
 }
 img {
   max-width: 100%;
@@ -96,28 +99,32 @@ img {
   aspect-ratio: 1/1;
  }
 
-.ArticleHeading{
+.PArticleHeading{
     font-family: 'Zalando Sans SemiExpanded', sans-serif;
+    
 }
 
-.BoxArticle p{
-    font-size: 16px;
-    padding: 20px;
+.PBoxArticle p{
+    font-size: 1em;
     font-family: 'Zalando Sans SemiExpanded', sans-serif;
 } 
 
-.BoxArticle:hover {
+.PBoxArticle:hover {
     transform: scale(1.1) translateY(-10px);
-    box-shadow: 0 20px 50px #f7fbff(0.35,0); 
 }
-.Abt{
+.PAbt{
     color: #08306b;
-    background-color: #ffffff;
-    border: 2px solid #08306b;
-    border-radius: 8px;
+    font-size: 1em;
+    background-color: #f7f7f7;
+    border: 3px solid #c6dbef;
+    /* border:none; */
+    border-radius: 10px;
     padding: 7px;
     cursor: pointer;
     margin-bottom: 20px;
+}
+.PAbt:hover{
+    background-color: #c6dbef;
 }
 
 
