--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -718,7 +718,16 @@ ul li {
 /* 0px–480px: Mobile phones */
 @media (max-width: 480px) {
   header {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     width: 100vw;
+    height: 80px;
+    padding: 0px 8px;
+  }
+
+  main {
+    padding-top: 80;
   }
 
   .nav-top {
@@ -726,53 +735,43 @@ ul li {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    /* width: 100%; */
+    height: 80px;
   }
-  /* ------------------*/
-    header {
+
+  .nav-bottom {
     display: flex;
-    position: relative;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1em;
-    height: 60px;
-  }
-  .nav-top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
     width: 100%;
+    background: #f7fbff;
+    text-align: center;
+    transform-origin: top;
+    transform: scaleY(0);
+    padding: 0;
+    transition: transform 0.5s ease, padding 0.5s ease;
   }
-  .logo-btn {
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
+
+  .nav-bottom.show {
+    transform: scaleY(1);
+    padding: 1em 0;
+    background-color: #deebf7;
+    width: 100vw;
+    left: -8px;
   }
-  .logo-btn img {
-    width: 50px;
+
+  .nav-bottom a {
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
-  .logo-btn p {
-    font-size: 1rem;
-    margin: 0;
+
+  .nav-bottom.show a {
+    opacity: 1;
+    transition-delay: 0.2s;
   }
-  /* Hamburger */
-  .hamburger {
-    display: block;
-    border: none;
-    background: none;
-    cursor: pointer;
-    width: 30px;
-    height: 20px;
-    position: relative;
-    z-index: 1001;
+
+  .nav-top .hamburger {
+    visibility: visible;
   }
-  .hamburger span {
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    background: #08306B;
-    left: 0;
-  }
+
   .hamburger span:nth-child(1) {
     top: 0;
   }
@@ -781,35 +780,6 @@ ul li {
   }
   .hamburger span:nth-child(3) {
     top: 16px;
-  }
-  /* Nav links */
-  .nav-bottom {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
-    background: #F7FBFF;
-    z-index: 999;
-  }
-  .nav-bottom.show {
-    display: flex;
-  }
-  .nav-bottom a {
-    padding: 0.5rem 0;
-    text-align: center;
-  }
-
-
-  /* ------------------- */
-
-  .nav-top .hamburger {
-    visibility: visible;
-  }
-
-  .nav.nav-bottom {
-    visibility: hidden;
   }
 
   footer {
