--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1185,11 +1185,13 @@ img{
 
 
 /* ----------------------------------- */
-/* ----- RESPONSIIVE BREAKPOINTS ----- */
-/* ------------------------------------ */
+/*      RESPONSIIVE BREAKPOINTS        */
+/* ----------------------------------- */
 
-/* 769px–1297px: Tablets and small laptops */
-@media (min-width: 769px) and (max-width: 1297px) {
+/* ======================================= */
+/* 761px–1297px: Tablets and small laptops */
+/* ======================================= */
+@media (min-width: 761px) and (max-width: 1297px) {
   /* ********* General ********* */
   /* ----- Naavigation ----- */
   header {
@@ -1256,7 +1258,7 @@ img{
   /* ------ Footer -----*/
 
   footer {
-    padding: 5em 0;
+    padding: 5em 0 1em 0;
   }
 
   footer section {
@@ -1314,7 +1316,7 @@ img{
   .motto-overlay p {
     /* margin: 0; */
     padding: 145px 10px;
-    font-size: 40px;
+    font-size: 50px;
   }
 
   .home-container.home-container.spacing {
@@ -1348,56 +1350,24 @@ img{
       #f7fbff 100%
     );
   }
-
   .get-involved-overlay {
     width: 100vw;
   }
 
   /* ----- Home - Slides ----- */
-
   .slide-container {
     width: 100%;
     height: 530px;
   }
 
   .slide-home {
-    flex-direction: column;
     width: 100vw;
     overflow: hidden;
   }
 
   .slide-home .left {
-    width:100vw;
-    padding: 5px 50px;
-    justify-content: start;
+    padding: 50px 30px 50px 70px;
   }
-
-  .slide-home .right {
-    width: 500px;
-    height: 200px;
-    order: -1;
-  }
-
-  .slide-home .right img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .back, .next {
-    top: 44%;
-    color: white;
-    background-color: rgba(8, 82, 156, 0.462)
-  }
-
-  .back {
-    left: 5px;
-  }
-
-  .next {
-    right: 5px;
-  }
-
   /* ******** END HOME PAGE ********* */
   
   /* ******** ABOUT PAGE ********* */
@@ -1504,9 +1474,9 @@ img{
 }
 
 /* =========================================== */
-/* 481px–768px: Large phones and small tablets */
+/* 481px–760px: Large phones and small tablets */
 /* =========================================== */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 760px) {
 
   /* ********* General ********* */
   /* ----- Naavigation ----- */
@@ -1691,7 +1661,7 @@ img{
   }
 
   .slide-home .right {
-    width: 500px;
+    width: 100vw;
     height: 200px;
     order: -1;
   }
